--- a/Sprint0/Task0.ipynb
+++ b/Sprint0/Task0.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -167,25 +167,25 @@
    "source": [
     "int[] numbers = { 5, 8, 1, 3, 9, 6, 7, 2 };\n",
     "\n",
-    "        Console.WriteLine(\"Исходный массив: \" + string.Join(\", \", numbers));\n",
+    "Console.WriteLine(\"Исходный массив: \" + string.Join(\", \", numbers));\n",
     "\n",
-    "        int minVal = numbers.Min();\n",
-    "        int maxVal = numbers.Max();\n",
-    "        Console.WriteLine($\"\\nМинимальное значение: {minVal}\");\n",
-    "        Console.WriteLine($\"Максимальное значение: {maxVal}\");\n",
+    "int minVal = numbers.Min();\n",
+    "int maxVal = numbers.Max();\n",
+    "Console.WriteLine($\"\\nМинимальное значение: {minVal}\");\n",
+    "Console.WriteLine($\"Максимальное значение: {maxVal}\");\n",
     "\n",
-    "        long sum = numbers.Sum();\n",
-    "        Console.WriteLine($\"\\nСумма всех элементов: {sum}\");\n",
+    "long sum = numbers.Sum();\n",
+    "Console.WriteLine($\"\\nСумма всех элементов: {sum}\");\n",
     "\n",
-    "        double average = numbers.Average();\n",
-    "        Console.WriteLine($\"\\nСреднее арифметическое: {average}\");\n",
+    "double average = numbers.Average();\n",
+    "Console.WriteLine($\"\\nСреднее арифметическое: {average}\");\n",
     "\n",
-    "        int[] sortedNumbers = numbers.OrderBy(n => n).ToArray();\n",
-    "        Console.WriteLine($\"\\nОтсортированный массив: {string.Join(\", \", sortedNumbers)}\");\n",
+    "int[] sortedNumbers = numbers.OrderBy(n => n).ToArray();\n",
+    "Console.WriteLine($\"\\nОтсортированный массив: {string.Join(\", \", sortedNumbers)}\");\n",
     "\n",
-    "        int numberToCheck = 3;\n",
-    "        bool containsNumber = numbers.Contains(numberToCheck1);\n",
-    "        Console.WriteLine($\"\\nМассив содержит число {numberToCheck}? {containsNumber1}\");"
+    "int numberToCheck = 3;\n",
+    "bool containsNumber = numbers.Contains(numberToCheck);\n",
+    "Console.WriteLine($\"\\nМассив содержит число {numberToCheck}? {containsNumber}\");"
    ]
   },
   {
